# UnofficialEGGMouseConfig

./: CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.h  config.hpp  device.cpp  device.hpp  fake-hidapi-emscripten.cpp  fake-hidapi-emscripten.hpp  index.html  lemonmilk.h  main-glfw.cpp  main-sdl2.cpp  main.cpp  platform.cpp  platform.hpp  themes.inc  xm2w 4k offsets.txt
